Fixing padding issue on Safari

--- a/src/youtube-facade.scss
+++ b/src/youtube-facade.scss
@@ -129,8 +129,8 @@ $play-btn-height: 32px;
   transition: opacity $transition-settings;
 
   &-inner {
-    aspect-ratio: 16/9;
     background-color: #000;
+    width: 100%;
   }
 }
 
